--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/md5": "^2.3.5",
-    "@types/multer": "^1.4.11",
+    "@types/multer": "^1.4.13",
     "@types/nodemailer": "^6.4.14",
     "@types/rimraf": "^4.0.5",
     "adm-zip": "^0.5.14",
@@ -15,14 +15,14 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": ">=4.20.0",
     "express-session": "^1.18.0",
     "file-type": "^16.5.4",
     "googleapis": "^134.0.0",
     "jimp": "^0.22.12",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "next": "^14.1.3",
+    "multer": ">=2.0.1",
+    "next": ">=14.2.30",
     "node-stream-zip": "^1.15.0",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
